# rhap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  conanfile.txt  old.rs
.cargo/: config.toml
docs/adr/: 0001-alsa-double-open-for-usb-dac-noise.md
src/: a.rs  action.rs  app_state.rs  audio.rs  device.rs  logging.rs  main.rs  media_sync.rs  musictrack.rs  old.rs  playback.rs  player.rs  song.rs
src/audio/: acquire.rs  device.rs  host.rs  log.rs  mod.rs  retry.rs  stream_handle.rs
src/audio/api/: mod.rs  wasapi.rs
src/audio/api/alsa/: alsa_api.rs  api.rs  device.rs  host.rs  mod.rs
src/audio/api/jack/: api.rs  device.rs  host.rs  mod.rs
src/audio/api/pipewire/: api.rs  device.rs  host.rs
src/audio/api/wasapi/: api.rs  com.rs  device.rs  host.rs  mod.rs  stream.rs  utils.rs
src/device/: log.rs  manager.rs  traits.rs
src/media_controls/: mod.rs
src/media_controls/api/: mod.rs
src/media_controls/api/souvlaki/: controls.rs  hwnd.rs  mod.rs
src/notifications/: mod.rs
src/notifications/api/: mod.rs
src/notifications/api/winrt/: mod.rs
src/tools/: mod.rs  resampler.rs  rubato-resampler.rs
src/ui/: app.rs  component.rs  events.rs  keyboard_manager.rs  media_keys_handler.rs  mod.rs  theme.rs  utils.rs
src/ui/screens/: mod.rs  playlist.rs
src/ui/widgets/: currently_playing_widget.rs  device_selector.rs  mod.rs  search_widget.rs
