[package]
name = "rhap"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
crossterm = "0.28.1"
log = "0.4.27"
rand = "0.9.0"
rubato = { version = "0.16.1", features = ["fft_resampler", "realfft", "num-complex"] }
symphonia = { version = "0.5.4", features = ["all-formats", "all-codecs", "opt-simd", "opt-simd-avx", "opt-simd-neon", "opt-simd-sse"] }
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.5.0"
num-integer = "0.1.46"
rustfft = "6.2.0"

[dependencies.ratatui]
version = "0.29.0"
default-features = false
features = ["crossterm", "all-widgets", "macros"]

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Devices_Enumeration",
    "Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Variant",
]

[profile.release]
opt-level = 3
lto = "fat"
