[package]
name = "rhap"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
log = "0.4.28"
rand = "0.9.2"
rubato = { version = "0.16.2", features = ["fft_resampler", "realfft", "num-complex"] }
symphonia = { version = "0.5.5", features = ["all-formats", "all-codecs", "opt-simd", "opt-simd-avx", "opt-simd-neon", "opt-simd-sse"] }
tokio = { version = "1.48.0", features = ["full"] }
glob = "0.3.3"
num-integer = "0.1.46"
rustfft = "6.4.1"
rayon = "1.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"
cpal = { version = "0.15", features = ["jack"] }
regex = "1.11"
libc = "0.2"

[dependencies.ratatui]
version = "0.29.0"
default-features = false
features = ["crossterm", "all-widgets", "macros"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Devices_Enumeration",
    "Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Variant",
]

[features]
default = ["wasapi"]
wasapi = []
alsa = []
linux-backends = ["alsa"]

# Platform-specific defaults
[target.'cfg(target_os = "windows")'.features]
default = ["wasapi"]

[target.'cfg(target_os = "linux")'.features]
default = ["alsa"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true
#overflow-checks = false
